--- a/apps/my-pets/src/app.html
+++ b/apps/my-pets/src/app.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="">
 	<title>tourmate</title>
 	<head>
@@ -12,12 +12,19 @@
 		<link rel="apple-touch-icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon-precomposed" href="/favicon.ico" />
 		<link rel="shortcut icon" href="/favicon.ico" />
-		<script src="https://kit.fontawesome.com/f9631ea83e.js" crossorigin="anonymous"></script>
+		<script
+			src="https://kit.fontawesome.com/f9631ea83e.js"
+			crossorigin="anonymous"
+		></script>
 		<link rel="manifest" href="/manifest.json" />
 
 		%sveltekit.head%
 	</head>
-	<body class="select-none overflow-x-hidden" data-sveltekit-preload-data="hover">
+	<body
+		data-theme="skeleton"
+		class="select-none overflow-x-hidden"
+		data-sveltekit-preload-data="hover"
+	>
 		<div class="flex justify-center !w-[100dvw] !h-[100dvh]">%sveltekit.body%</div>
 	</body>
 </html>
