--- a/apps/my-pets-web/src/app.html
+++ b/apps/my-pets-web/src/app.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" class="">
-	<title>tourmate</title>
+	<title>My pets</title>
 	<head>
 		<meta charset="utf-8" />
 		<meta name="theme-color" content="dark" />
