--- a/apps/my-pets-web/src/app.html
+++ b/apps/my-pets-web/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="theme-color" content="dark" />
 		<meta
 			name="viewport"
-			content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"
+			content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, user-scalable=no"
 		/>
 		<link rel="icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/favicon.ico" />
